<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/student_number_title"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="@string/student_number"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <TextView
                android:id="@+id/nohd"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".4"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="hwllo"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/student_name_title"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="@string/student_name"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <TextView
                android:id="@+id/nhd"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".4"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:text="hwllo"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="56dp"

                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="@string/procedure_management"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <TextView
                android:id="@+id/manage"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".4"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="hwllo"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/intro_to_logistics_title"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="@string/strategic_management"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <TextView
                android:id="@+id/strategy"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".4"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="hwllo"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/intro_to_transportation_title"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="@string/protection_and_operational"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <TextView
                android:id="@+id/operational"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".4"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="hwllo"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/intro_custom_procedure_title"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:paddingLeft="12dp"
                android:singleLine="true"
                android:text="@string/international_transport_management"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <TextView
                android:id="@+id/international"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".4"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="hwllo"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/business_communication_title"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="@string/supply_chain_management"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <TextView
                android:id="@+id/chain"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".4"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="hwllo"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:id="@+id/statstitle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="@string/financial_management"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <TextView
                android:id="@+id/financial"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".4"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="hwllo"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="@string/global_marketing"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <TextView
                android:id="@+id/global"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".4"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="hwllo"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="@string/business_law"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <TextView
                android:id="@+id/law"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".4"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="hwllo"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:text="@string/human_resource_management"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <TextView
                android:id="@+id/Hr"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".4"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="hwllo"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="@string/storage_methodology"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <TextView
                android:id="@+id/Methodology"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".4"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="hwllo"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:paddingStart="15dp"
                android:text="@string/entrepreneur_creativity"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <TextView
                android:id="@+id/creative"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".4"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="hwllo"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="@string/percentage"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <TextView
                android:id="@+id/phd"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight=".4"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"

                android:text="hwllo"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>